# Template-rust-picosdk-rp2040

./: .gitignore  CMakeLists.txt  README.md
c/: __nostatic__.c  main.c  pico_sdk_nostatic.c
rust/: Cargo.toml
rust/src/: lib.rs
